重构添加评论页面

--- a/client/components/movie-container/movie-container.wxml
+++ b/client/components/movie-container/movie-container.wxml
@@ -1,3 +1,4 @@
+<!--components/movie-container/movie-container.wxml-->
 <!--pages/movie-detail/movie-detail.wxml-->
 <view class="movie-wrapper">
   <view class="movie-info">
