--- a/client/pages/comment-add/comment-add.wxml
+++ b/client/pages/comment-add/comment-add.wxml
@@ -1,5 +1,5 @@
 <!--pages/comment-add/comment-add.wxml-->
-<login wx:if="{{!userInfo}}"  bind:login="onTapLogin" tips="点击微信登录后才可添加评论"></login>
+<login wx:if="{{!userInfo}}" bind:login="onTapLogin" tips="点击微信登录后才可添加评论"></login>
 <view wx:else>
   <view class="record-indicator" wx:if="{{isRecording}}">
     <image class="record-indicator-icon" mode="widthFix" src="{{isCancelRecording ? '../../images/back-white.png' : '../../images/voice-white.png'}}"></image>
@@ -12,33 +12,11 @@
       <image class="movie-image" src="{{movie.image}}"></image>
       <view class="movie-title">{{movie.title}}</view>
     </view>
-      <!-- 评论区域 -->
-      <view class="comment-info">
-       <view class="comment-tips">请输入你的影评内容...</view>
-       <view class="comment-rating">
-        <rating bind:rating="onRating"></rating>
-       </view>
-        <!-- 文字评论 -->
-        <block wx:if="{{commentType === 0}}" class="text-comment">
-          <textarea class="content-textarea" auto-focus maxlength="{{textMaxLength}}" bindinput="onInput"></textarea>
-          <view class="content-counter">{{text.length}}/{{textMaxLength}}</view>
-        </block>
-        <!-- 语音评论 -->
-        <block wx:if="{{commentType === 1}}">
-          <audio-player wx:if="{{voice}}" audio="{{voice}}"></audio-player>
-          <!-- 录音按钮 -->
-          <view class="action-buttons">
-            <view id="record" class="{{isRecording ? 'recording' : ''}}" bindtouchstart="touchStart" bindtouchcancel="touchCancel" bindtouchend="touchEnd" bindtouchmove="touchMove">
-              <image class="record-icon" src="../../images/voice.png"></image>
-              <view class="record-text">{{isRecording ? '松开 结束' : '按住 说话'}}</view>
-            </view>
-          </view>
-        </block>
-      </view>
-
+    <comment-editor wx:if="{{isEditing}}" comment-type="{{commentType}}" text="{{content}}" voice="{{content}}" rating="{{rating}}" bind:rated="onRated" bind:recorded="onRecorded" bind:input="onInput"></comment-editor>
+    <comment-previewer wx:else comment-type="{{commentType}}" content="{{content}}" rating="{{rating}}" user-info="{{userInfo}}" bind:toedit="toEdit" bind:publish="publish"></comment-previewer>
   </view>
 
-  <button class="btn-finish" disabled="{{!voice && !text.length}}" bindtap="preview">
+  <button class="btn-finish" disabled="{{!content}}" bindtap="preview">
     完成
   </button>
 </view>
