--- a/client/components/movie-container/movie-container.wxss
+++ b/client/components/movie-container/movie-container.wxss
@@ -1,1 +1,56 @@
 /* components/movie-container/movie-container.wxss */
+
+:host {
+  display: block;
+  /* height: 750rpx;  */
+}
+
+.wrapper {
+  position: relative;
+  margin: 128rpx 32rpx 64rpx;
+  background: white;
+  padding: 32rpx 64rpx;
+  height: 100%;
+}
+
+.wrapper .content {
+  margin-top: -100rpx;
+  text-align: center; 
+}
+
+.movie-image {
+  width: 200rpx;
+  height: 300rpx;
+  border: 1px solid black;
+  margin: 0 auto;
+}
+
+.movie-title {
+  text-align: center;
+  font-size: 40rpx;
+  line-height: 56rpx;
+}
+
+.action-buttons {
+  margin-top: 32rpx;
+}
+.action-buttons > view {
+  display: flex;
+  justify-content: space-between;
+}
+
+.action-buttons button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30rpx;
+  line-height: 48rpx;
+  padding: 16rpx;
+  color: #637782;
+}
+
+.btn-icon {
+  width: 50rpx;
+  height: 50rpx;
+  margin-right: 16rpx;
+}
