重构了电影详情页面

--- a/client/pages/comment-add/comment-add.wxss
+++ b/client/pages/comment-add/comment-add.wxss
@@ -1,7 +1,10 @@
 /* pages/comment-add/comment-add.wxss */
 
 button.btn-finish {
-  width: 500rpx;
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
   color: white;
   background-color: #1cb977;
 }
