--- a/client/components/comment-editor/comment-editor.wxml
+++ b/client/components/comment-editor/comment-editor.wxml
@@ -18,13 +18,14 @@
   </block>
   <!-- 语音评论 -->
   <block wx:if="{{commentType === 1}}">
-    <audio-player wx:if="{{voice}}" audio="{{voice}}" bind:tapplayer="tapPlayer"></audio-player>
+    <view class="audio-wrapper">
+      <audio-player wx:if="{{voice}}" audio="{{voice}}" bind:tapplayer="tapPlayer"></audio-player>
+    </view>
+
     <!-- 录音按钮 -->
-    <view class="action-buttons">
-      <view class="recorder {{isRecording ? 'recording' : ''}}" bindtouchstart="touchStart" bindtouchcancel="touchCancel" bindtouchend="touchEnd" bindtouchmove="touchMove">
-        <image class="record-icon" src="../../images/voice.png"></image>
-        <view class="record-text">{{isRecording ? '松开 结束' : '按住 说话'}}</view>
-      </view>
+    <view class="recorder {{isRecording ? 'recording' : ''}}" bindtouchstart="touchStart" bindtouchcancel="touchCancel" bindtouchend="touchEnd" bindtouchmove="touchMove">
+      <image class="record-icon" src="../../images/voice.png"></image>
+      <view class="record-text">{{isRecording ? '松开 结束' : '按住 说话'}}</view>
     </view>
   </block>
 </view>
