--- a/client/components/comment-editor/comment-editor.wxss
+++ b/client/components/comment-editor/comment-editor.wxss
@@ -38,6 +38,11 @@ audio-player {
   color: darkgray;
 }
 
+.audio-wrapper {
+  margin: 32rpx;
+  height: 60rpx; 
+}
+
 .recorder {
   display: flex;
   justify-content: center;
@@ -92,12 +97,4 @@ audio-player {
 
 .record-indicator-text.cancel {
   background-color: rgba(255, 0, 0, 0.5);
-}
-
-.action-buttons {
-  position: absolute;
-  left: 0;
-  right: 0;
-  bottom: 0; 
-  text-align: center;
 }
