--- a/client/pages/movie-detail/movie-detail.wxml
+++ b/client/pages/movie-detail/movie-detail.wxml
@@ -1,4 +1,35 @@
 <!--pages/movie-detail/movie-detail.wxml-->
+<movie-container movie="{{movie}}">
+  <view slot="content">
+    <view class="movie-rating">
+      <view class="rating-info">
+        <view class="rating-tips">侃侃评分</view>
+        <view class="rating-score">{{movie.avgRating}}/5.0</view>
+        <view class="rating-count">共{{movie.totalCount}}人评价</view>
+      </view>
+
+      <view class="rating-detail">
+        <view class="bar-wrapper" wx:for="{{movie.ratings}}" wx:key="score">
+          <view class="bar-tips">{{item.score}}星</view>
+          <view class="bar" style="width: {{item.count / movie.totalCount * 250}}rpx"></view>
+          <view>{{item.ratio}}%</view>
+        </view>
+      </view>
+    </view>
+    <view class="movie-description">{{movie.description}}</view>
+  </view>
+  <view slot="actions">
+    <button class="view-comments" bindtap="toCommentList">
+      <image class="btn-icon" src="../../images/movie.png"></image>
+      <view class="btn-text">查看影评</view>
+    </button>
+    <button class="add-comment" bindtap="showActionSheet">
+      <image class="btn-icon" src="../../images/movie.png"></image>
+      <view class="btn-text">添加影评</view>
+    </button>
+  </view>
+</movie-container>
+<!-- 
 <view class="movie-wrapper">
   <view class="movie-info">
     <image class="movie-image" mode="aspectFill" src="{{movie.image}}"></image>
@@ -30,4 +61,4 @@
       <view class="btn-text">添加影评</view>
     </button>
   </view>
-</view>
+</view> -->
