--- a/client/pages/comment-detail/comment-detail.wxml
+++ b/client/pages/comment-detail/comment-detail.wxml
@@ -1,21 +1,25 @@
 <!--pages/comment-detail/comment-detail.wxml-->
-<login wx:if="{{!userInfo}}" bind:login="onTapLogin" tips="点击微信登录后才可添加评论"></login>
-<movie-container>
+<!-- <login wx:if="{{!userInfo}}" bind:login="onTapLogin" tips="点击微信登录后才可添加评论"></login> -->
+<movie-container movie="{{movie}}">
   <view slot="content">
-    <comment-previewer rating="{{rating}}" comment-type="{{commentType}}" content="{{content}}" user-info="{{userInfo}}" bind:toedit="toEdit" bind:publish="publish"></comment-previewer>
+    <comment-previewer rating="{{comment.rating}}" comment-type="{{comment.commentType}}" content="{{comment.content}}" user-info="{{commentUserInfo}}"></comment-previewer>
   </view>
   <view slot="actions">
-    <button class="view-comments">
-      <image class="btn-icon" src="../../images/movie.png"></image>
-      <view class="btn-text">收藏</view>
+    <button class="action-button" bindtap="toggleFave">
+      <image class="btn-icon" src="{{isFave ? '../../images/star.png' : '../../images/unstar.png'}}"></image>
+      <view class="btn-text">{{isFave ? '取消收藏' : '收藏'}}</view>
     </button>
-    <button class="view-comments">
-      <image class="btn-icon" src="../../images/movie.png"></image>
-      <view class="btn-text">喜欢</view>
+    <button class="action-button" bindtap="toggleLike">
+      <image class="btn-icon" src="{{isLike ? '../../images/heart-sel.png' : '../../images/heart.png'}}"></image>
+      <view class="btn-text">{{comment.likeCount > 9999 ? '9999+' : comment.likeCount}}</view>
     </button>
-    <button class="add-comment" bindtap="showActionSheet">
+    <button class="action-button" bindtap="showActionSheet">
       <image class="btn-icon" src="../../images/movie.png"></image>
       <view class="btn-text">写影评</view>
     </button>
   </view>
 </movie-container>
+
+<button wx:if="{{!userInfo}}" class="wx-login wx-green"  open-type="getUserInfo" bindgetuserinfo="onTapLogin">
+  微信登录
+</button>
